--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -4,47 +4,40 @@
   left: 50%;
   margin: 20px;
   transform: translate(-50%, 0);
-  padding: 10px 20px;
+  padding: 10px 30px;
   pointer-events: none;
 
-  background: #005577;
-  border: 1px solid #fff;
-  border-radius: 10px;
+  background: #005691;
+  border-radius: 5px;
   color: #fff;
+  font-size: 24px;
 
   .loading-dots {
+    position: relative;
     vertical-align: baseline;
-    width: 4px;
-    height: 16px;
     display: inline-block;
     margin-left: 20px;
 
     span {
       vertical-align: middle;
       display: inline-block;
-      width: 2px;
-      height: 20px;
+      width: 10px;
+      height: 10px;
+      margin-right: 4px;
       background: currentColor;
-      opacity: 0.4;
+      opacity: 0;
       border-radius: 5px;
 
       animation: bounce 0.8s linear infinite;
-      margin: 0 -2px 0 0;
 
       &:nth-child(2) {
         animation-delay: 100ms;
-        animation-duration: 0.5s;
-        height: 18px;
       }
       &:nth-child(3) {
         animation-delay: 200ms;
-        animation-duration: 0.7s;
-        height: 12px;
       }
       &:nth-child(4) {
         animation-delay: 300ms;
-        animation-duration: 0.9s;
-        height: 24px;
       }
     }
   }
@@ -52,10 +45,14 @@
 
 @keyframes bounce {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
   }
 
   to {
-    transform: rotate(180deg);
+    opacity: 0;
   }
 }
