--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,6 +1,6 @@
 .table {
   width: 100%;
-  border: 1px dotted #ccc;
+  border: 2px dotted #e8f1f5;
   padding: 0;
   margin: 10px 0;
   table-layout: fixed;
@@ -17,7 +17,7 @@
   .header,
   .cell {
     flex-grow: 1;
-    padding: 5px 10px;
+    padding: 7px 10px;
 
     @media (min-width: 600px) {
       white-space: nowrap;
@@ -37,7 +37,7 @@
     font-size: 18px;
     font-weight: bold;
     color: #fff;
-    background: #068;
+    background: #004a7c;
   }
 
   .header-publisher,
@@ -56,13 +56,15 @@
 
   .header-distribution,
   .cell-distribution {
-    flex: 1 1 150px;
+    flex: 2 1 200px;
     @media (max-width: 600px) {
       flex-basis: 50px;
     }
+
+    white-space: normal;
   }
 
   .tbody .row:nth-child(2n + 1) {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: #e8f1f5;
   }
 }
