--- a/src/index.scss
+++ b/src/index.scss
@@ -18,28 +18,35 @@ code {
 }
 
 a:link {
-  color: #08a;
+  color: #005691;
 }
 
 a:visited {
-  color: #96c;
+  color: #3c3e50;
 }
 
 h1 {
   font-size: 28px;
   font-weight: 400;
   margin: 20px 0;
-  color: #005577;
+  color: #21232f;
+}
+
+input,
+select {
+  border: 2px solid #005691;
+  border-style: none none solid;
+  border-radius: 0;
+  padding: 5px 10px;
+  font-size: 16px;
 }
 
 select {
   position: relative;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 5px 10px;
   margin: 5px 0;
   appearance: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' width='20px' height='20px'%3E%3Cpath d='M2,6l10,0l-5,8' fill='grey' /%3E%3C/svg%3E");
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' width='20px' height='20px'%3E%3Cpath d='M2,6l10,0l-5,8' fill='005691' /%3E%3C/svg%3E");
   background-position: right center;
   background-repeat: no-repeat;
   cursor: pointer;
