--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,12 +1,13 @@
 .table {
   width: 100%;
-  border: 2px dotted #e8f1f5;
+  border: 1px solid rgba(128, 128, 128, 0.2);
+  border-radius: 4px;
   padding: 0;
   margin: 10px 0;
   table-layout: fixed;
 
   .header {
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
   }
 
   .row {
@@ -34,15 +35,14 @@
 
   .cell-publisher {
     width: 100%;
-    font-size: 18px;
-    font-weight: bold;
     color: #fff;
-    background: #004a7c;
+    background: var(--theme-dark);
   }
 
   .header-publisher,
   .cell-title {
     flex: 8 1 500px;
+    padding-left: 20px;
   }
 
   .header-title {
@@ -65,6 +65,6 @@
   }
 
   .tbody .row:nth-child(2n + 1) {
-    background-color: #e8f1f5;
+    background-color: rgba(96, 96, 96, 0.05);
   }
 }
