Search description, more info in detail dialog

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,8 +20,8 @@
   .format {
     display: inline-block;
     padding: 2px 4px;
-    border: 1px solid var(--theme-dark);
-    background: var(--theme);
+    border: 1px solid var(--tag-border);
+    background: var(--tag);
     color: #fff;
     font-size: 12px;
     border-radius: 3px;
