--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,8 @@
   --theme: #005691;
   --theme-hover: #004a7c;
   --theme-dark: #004a7c;
+  --tag: #0070a0;
+  --tag-border: #006094;
   --focus: #005691;
   --link: var(--theme);
   --link-visited: #3c3e50;
@@ -21,6 +23,8 @@
     --theme: #003360;
     --theme-hover: #002240;
     --theme-dark: #002240;
+    --tag: #004070;
+    --tag-border: #002240;
     --link: #74b3fe;
     --link-visited: #888;
     --input-border: #444;
