--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -1,9 +1,19 @@
-.loading {
+.loading-mask {
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(96, 96, 96, 0.5);
+  z-index: 100;
+}
+
+.loading {
+  position: fixed;
+  top: 50%;
   left: 50%;
   margin: 20px;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
   padding: 10px 30px;
   pointer-events: none;
 
@@ -12,11 +22,17 @@
   color: #fff;
   font-size: 24px;
 
+  text-align: center;
+
+  p {
+    margin: 10px 0;
+  }
+
   .loading-dots {
     position: relative;
     vertical-align: baseline;
     display: inline-block;
-    margin-left: 20px;
+    margin: 10px 0;
 
     span {
       vertical-align: middle;
