--- a/src/components/Loading.scss
+++ b/src/components/Loading.scss
@@ -17,9 +17,9 @@
   padding: 10px 30px;
   pointer-events: none;
 
-  background: #005691;
-  border-radius: 5px;
-  color: #fff;
+  background: var(--primary);
+  border-radius: var(--border-radius);
+  color: var(--primary-inverse);
   font-size: 24px;
 
   text-align: center;
