--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,13 +1,13 @@
 .table {
   width: 100%;
-  border: 1px solid rgba(128, 128, 128, 0.2);
-  border-radius: 4px;
+  border: 1px solid var(--table-border-color);
+  border-radius: var(--border-radius);
   padding: 0;
   margin: 10px 0;
   table-layout: fixed;
 
   .header {
-    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    border-bottom: 1px solid var(--table-border-color);
   }
 
   .row {
@@ -35,8 +35,6 @@
 
   .cell-publisher {
     width: 100%;
-    color: #fff;
-    background: var(--theme-dark);
   }
 
   .header-publisher,
@@ -59,7 +57,7 @@
   }
 
   .cell-description {
-    width: 24px;
+    width: 44px;
     flex-grow: unset;
     text-align: center;
     svg {
@@ -76,9 +74,13 @@
   .cell-distribution {
     flex: 1 1 120px;
     white-space: normal;
+    button {
+      margin: 0;
+      font-size: 14px;
+    }
   }
 
   .tbody .row:nth-child(2n + 1) {
-    background-color: rgba(96, 96, 96, 0.05);
+    background-color: var(--table-row-stripped-background-color);
   }
 }
