--- a/src/index.scss
+++ b/src/index.scss
@@ -24,15 +24,35 @@ $primary-hue: 215;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  --typography-spacing-vertical: 1em;
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
 button {
   padding: 2px 4px;
+  font-weight: 600;
+}
+
+label {
   font-weight: 600;
 }
 
@@ -47,8 +67,7 @@ button {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 a,
@@ -69,4 +88,14 @@ select {
   position: relative;
   margin: 5px 0;
   cursor: pointer;
+}
+
+.tabler-icon-external-link {
+  width: 16px;
+  vertical-align: -2px;
+  margin-top: -8px;
+}
+
+.no-wrap {
+  white-space: nowrap;
 }
